--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "chartist": "^0.11.0",
     "preact": "^8.4.2",
     "preact-compat": "^3.0.0",
