--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "less-loader": "^2.2.3",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
-    "ncp": "^2.0.0",
+    "node node_modules/ncp/bin/ncp": "^2.0.0",
     "offline-plugin": "^4.5.3",
     "phantomjs-prebuilt": "^2.1.12",
     "postcss-loader": "^1.2.1",
